<resources>
    <string name="app_name">Ecall Doctor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signOut">SignOut</string>

    <string name="hint_name">Name <font fgcolor='#FF0000'>*</font></string>
    <string name="first_name_hint">First Name <font fgcolor='#FF0000'>*</font></string>
    <string name="last_name_hint">Last Name <font fgcolor='#FF0000'>*</font></string>
    <string name="hint_email">Email <font fgcolor='#FF0000'>*</font></string>
    <string name="hint_gender">Gender <font fgcolor='#FF0000'>*</font></string>
    <string name="hint_phone">Mobile <font fgcolor='#FF0000'>*</font></string>
    <string name="hint_date_of_birth">Date of Birth <font fgcolor='#FF0000'>*</font></string>

    <string-array name="genderList">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>

    <string-array name="bloodGroupList">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
</resources>