<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragment.UserSignUpFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
           >

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/firstNameET"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginLeft="16dp"
               android:layout_marginTop="24dp"
               android:layout_marginEnd="16dp"
               android:layout_marginRight="16dp"
               android:hint="@string/first_name_hint"
               app:endIconMode="clear_text"
               app:errorEnabled="true"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent">

               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:imeOptions="actionNext"
                   android:inputType="textCapWords|text"
                   android:maxLines="1" />
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/lastNameET"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginLeft="16dp"
               android:layout_marginEnd="16dp"
               android:layout_marginRight="16dp"
               android:hint="@string/last_name_hint"
               app:endIconMode="clear_text"
               app:errorEnabled="true"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/firstNameET">

               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="textCapWords|text"
                   android:imeOptions="actionNext"
                   />
           </com.google.android.material.textfield.TextInputLayout>




           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/emailET"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginLeft="16dp"
               android:layout_marginEnd="16dp"
               android:layout_marginRight="16dp"
               android:hint="@string/hint_email"
               app:endIconMode="clear_text"
               app:errorEnabled="true"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/lastNameET">

               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:imeOptions="actionNext"
                   android:inputType="textEmailAddress|text"
                   android:maxLines="1" />
           </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneET"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_phone"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailET">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress|text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/genderET"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_gender"
            app:endIconMode="dropdown_menu"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneET">

            <AutoCompleteTextView
                android:id="@+id/gender_auto_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="none"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressET"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_date_of_birth"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderET">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Accepting Legal &amp; Terms"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/addressET"
            app:layout_constraintTop_toBottomOf="@+id/addressET" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/terms_and_condition_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/textView"
            app:layout_constraintTop_toBottomOf="@id/textView">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I accept and agree"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/terms_and_condition_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Terms &amp; conditions"
                android:textStyle="italic"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/purple_200"
                app:layout_constraintBottom_toBottomOf="@+id/radioButton"
                app:layout_constraintStart_toEndOf="@id/radioButton"
                app:layout_constraintTop_toTopOf="@+id/radioButton" />

            <TextView
                android:id="@+id/and_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" and"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/terms_and_condition_tv"
                app:layout_constraintStart_toEndOf="@id/terms_and_condition_tv"
                app:layout_constraintTop_toTopOf="@+id/terms_and_condition_tv" />


        </androidx.constraintlayout.widget.ConstraintLayout>




          <com.google.android.material.button.MaterialButton
              android:id="@+id/signUpBtn"
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:layout_margin="16dp"
              android:layout_marginStart="24dp"
              android:layout_marginLeft="24dp"
              android:layout_marginEnd="24dp"
              android:layout_marginRight="24dp"
              android:padding="8dp"
              android:text="Next"
              app:cornerRadius="50dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/terms_and_condition_layout" />

           <ProgressBar
               android:id="@+id/progressbar"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:visibility="gone"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/emailET"
               tools:visibility="visible" />






    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>